Fix database connection, API responses, and admin status change errors
- Add environment variable validation and default DATABASE_URL handling
- Standardize API response format with 'ok' field across all routes
- Fix admin status change error handling
- Improve error messages and diagnostics
- Add setup scripts and troubleshooting documentation
- Fix '[object Object]' error display issues
- Enhance database error handling with specific error codes
- Add comprehensive error logging and retry logic

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "setup": "node scripts/setup-env.js && npx prisma generate && npx prisma db push"
   },
   "dependencies": {
     "react": "^18.3.1",
