Complete backend rebuild: Comments API, Admin auth, Edge Runtime fixes

--- a/package.json
+++ b/package.json
@@ -7,29 +7,27 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "setup": "node scripts/setup-env.js && npx prisma generate && npx prisma db push"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^14.2.5",
-    "framer-motion": "^11.0.5",
-    "lucide-react": "^0.344.0",
     "@prisma/client": "^5.19.1",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.0.5",
+    "install": "^0.13.0",
+    "lucide-react": "^0.344.0",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
-    "prisma": "^5.19.1"
+    "typescript": "^5.5.3"
   }
 }
-
-
